feat(road_system): 实现道路生成核心功能
- 移除StandardCharsets依赖，使用Files.readString和Files.writeString简化文件操作
- 删除无用的pluginId字段，优化配置类结构
- 添加道路生成器RoadGenerator类，实现完整的道路生成逻辑
- 集成道路生成器到插件主类，支持路径采样、高度计算和坡度限制
- 实现道路预览功能，包括挖填方量、桥梁隧道数量统计
- 添加道路投影预览功能，使用幽灵方块显示道路效果
- 实现道路实际构建功能，将道路方块放置到Minecraft世界
- 优化UI界面，禁用不可用按钮，改进颜色值格式处理
- 完善错误处理和日志记录，提升系统稳定性